--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Duckboard - Serverless Analytics Studio</title>
     <meta name="description" content="A privacy-first, serverless analytics studio that runs entirely in your browser. Analyze CSV and Parquet files with SQL and create beautiful charts." />
     <meta name="theme-color" content="#ffffff" />
-    <link rel="manifest" href="/manifest.json" />
+    <link rel="manifest" href="/manifest.webmanifest">
   </head>
   <body>
     <div id="root"></div>
